<resources>
    <string name="app_name">Login</string>
    <string name="username">Username</string>
    <string name="hello">Hello, there!</string>
    <string name="sign_up">Sign up</string>
    <string name="get_t">查看历史温度</string>
    <string name="get_h">查看历史湿度</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="good">Good</string>
    <string name="morning">Morning</string>
    <string name="password">Password</string>
    <string name="pic_number">Enter confirmation code</string>
    <string name="title_activity_show_temp">Welcome Home!</string>
    <string name="music">灯</string>
    <string name="fan">风扇</string>
    <string name="by_stefan">Designed By Stefan</string>
</resources>
