<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/good_morning_img" />

    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham"
                android:text="@string/good"
                android:textColor="#ffffff"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/gotham"
                android:text="@string/morning"
                android:textColor="#ffffff"
                android:textSize="32sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="2dp"
                android:background="#deff00" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/calibri"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="#9affffff"
        android:textSize="10sp"
        tools:ignore="SmallSp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableEnd="@drawable/ic_email_white_24dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#96ffffff"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="16dp"
                android:drawableEnd="@drawable/ic_lock_white_24dp"
                android:fontFamily="@font/calibri"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="45dp">
                <EditText
                    android:id="@+id/et_phoneCodes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textStyle="bold"
                    android:textColor="#96ffffff"
                    android:textSize="16sp"
                    android:hint="@string/pic_number" />
            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="#96ffffff"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="@font/calibri"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#96ffffff"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/calibri"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="#96ffffff"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>
