<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/device_beijing"
    tools:context=".ShowTemp"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#b8b8b8"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center">

        <com.stefan.platform.loginui.TempView
            android:id="@+id/device_temp_hum"
            android:layout_width="260dp"
            android:layout_height="260dp"
            android:layout_marginTop="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/get_past_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/buttonshapewhitebg"
            android:fontFamily="@font/calibri"
            android:text="@string/get_t"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="#96ffffff"
            android:textSize="16sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/get_past_hum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/buttonshapewhitebg"
            android:fontFamily="@font/calibri"
            android:text="@string/get_h"
            android:textAllCaps="false"
            android:textColor="#96ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        tools:ignore="RelativeOverlap"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/power_off"
                android:background="@drawable/button_rec"
                android:text="@string/music"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:padding="10dp"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/btn_fan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableBottom="@drawable/power_off"
                android:background="@drawable/button_rec"
                android:text="@string/fan"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:padding="10dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/by_stefan"
            android:gravity="center"
            android:layout_marginTop="60dp"/>

    </LinearLayout>





    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <include layout="@layout/content_show_temp" />

</android.support.design.widget.CoordinatorLayout>